--- a/examples/react-usage-react-bridge/package.json
+++ b/examples/react-usage-react-bridge/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack serve --config ./webpack.config.js",
-    "build": "webpack --output-path ../../dist/e1 --config ./webpack.config.js "
+    "build": "webpack --output-path ../../dist/e1 --config ./webpack.config.js --watch"
   },
   "keywords": [],
   "author": "",
