--- a/examples/vue2-usage-vue3-react-bridge/package.json
+++ b/examples/vue2-usage-vue3-react-bridge/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently  \"npm run dev:concurrently-serv\" ",
     "dev:concurrently-serv": "webpack serve --config webpack.config.js --config-name concurrently",
-    "build": "webpack --output-path ../../dist/e3 --config ./webpack.config.js "
+    "build": "webpack --output-path ../../dist/e3 --config ./webpack.config.js --watch"
   },
   "keywords": [],
   "author": "",
