--- a/examples/vue3-usage-react-bridge/package.json
+++ b/examples/vue3-usage-react-bridge/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite --emptyOutDir build",
+    "build": "vite --emptyOutDir --watch build",
     "preview": "vite preview"
   },
   "author": "",
