--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "core"
   ],
   "scripts": {
-    "start": "concurrently \"vite\" \"npm run e1\" \"npm run e2\" \"npm run e2-d\" \"npm run e2-f\" \"npm run e3\" \"npm run e4\"",
+    "start": "pnpm i && npm run build",
+    "build": "concurrently \"vite\" \"npm run e1\" \"npm run e2\" \"npm run e2-d\" \"npm run e2-f\" \"npm run e3\" \"npm run e4\"",
     "e1": "npm run build --prefix ./examples/react-usage-react-bridge",
     "e2": "npm run build --prefix ./examples/react-usage-vue-bridge",
     "e2-d": "npm run build2 --prefix ./examples/react-usage-vue-bridge",
@@ -32,7 +33,8 @@
   },
   "dependencies": {
     "concurrently": "^8.2.1",
-    "vite": "^6.1.0"
+    "vite": "^6.1.0",
+    "pnpm": "9.5.0"
   },
   "keywords": [
     "micro-frontend",
